# src/main/kotlin/com/elegant/software/blitzpay/merchant/api/MerchantBranchModels.kt
@@ -12,6 +12,7 @@ data class CreateBranchRequest(
     val postalCode: String? = null,
     val country: String? = null,
     val contactFullName: String? = null,
+    val website: String? = null,
     val contactEmail: String? = null,
     val contactPhoneNumber: String? = null,
     val activePaymentChannels: Set<MerchantPaymentChannel> = emptySet(),
@@ -30,6 +31,7 @@ data class UpdateBranchRequest(
     val postalCode: String? = null,
     val country: String? = null,
     val contactFullName: String? = null,
+    val website: String? = null,
     val contactEmail: String? = null,
     val contactPhoneNumber: String? = null,
     val activePaymentChannels: Set<MerchantPaymentChannel> = emptySet(),
@@ -42,6 +44,7 @@ data class UpdateBranchRequest(
 data class BranchResponse(
     val id: UUID,
     val merchantId: UUID,
+    val branchCode: String = "",
     val name: String,
     val active: Boolean,
     val addressLine1: String?,
@@ -50,6 +53,7 @@ data class BranchResponse(
     val postalCode: String?,
     val country: String?,
     val contactFullName: String?,
+    val website: String? = null,
     val contactEmail: String?,
     val contactPhoneNumber: String?,
     val activePaymentChannels: Set<MerchantPaymentChannel>,
